--- a/resources/css/components/general.css
+++ b/resources/css/components/general.css
@@ -1,6 +1,55 @@
-*{
-    
-}
-.nav{
+* {
+    margin:0; padding:0;
+  }
 
+  .header {
+    height: 100px;
+    width: 100%;
+    padding: 15px 0;
+    background-color: #0b4d21;
+    color: whitesmoke;
+  }
+
+  .headline{
+      line-height: 100px;
+      float: left;
+      margin-left: 100px;
+  }
+  .nav-list {
+      line-height: 100px;
+      float: left;
+      margin-left: 30px;
+      list-style: none;
+  }
+  .nav-list-item {
+    list-style: none;
+    display: inline-block;
+    margin: 0 20px;
+  }
+
+.footer {
+    width: 100%;
+    height: 120px; 
+    text-align: center;
+    padding: 50px 0;
+    background-color: #0b4d21;
+}
+.footer-text {
+    color:whitesmoke;
+}
+
+.home-header {
+    height: 100px;
+    width: 100%;
+    padding: 15px 0;
+    background-color: #0b4d21;
+    color: whitesmoke;
+  }
+
+.home-footer {
+    width: 100%;
+    height: 60px; 
+    text-align: center;
+    padding: 20px 0;
+    background-color: #0b4d21;
 }
