--- a/resources/css/components/general.css
+++ b/resources/css/components/general.css
@@ -6,18 +6,18 @@
     height: 100px;
     width: 100%;
     padding: 15px 0;
-    background-color: #0b4d21;
+    background-color: #2b7a45;
     color: whitesmoke;
   }
 
-  .headline{
-      line-height: 100px;
+  .headline img{
+      height: 85px;
       float: left;
       margin-left: 100px;
   }
   .nav-list {
       line-height: 100px;
-      float: left;
+      float: right;
       margin-left: 30px;
       list-style: none;
   }
@@ -25,14 +25,18 @@
     list-style: none;
     display: inline-block;
     margin: 0 20px;
+    color: whitesmoke;
+    font-size:21px;
   }
 
 .footer {
     width: 100%;
-    height: 120px; 
+    height: 60px; 
     text-align: center;
-    padding: 50px 0;
-    background-color: #0b4d21;
+    padding: 20px 0;
+    background-color: #2b7a45;
+    position: absolute;
+    bottom: 0; 
 }
 .footer-text {
     color:whitesmoke;
@@ -42,7 +46,7 @@
     height: 100px;
     width: 100%;
     padding: 15px 0;
-    background-color: #0b4d21;
+    background-color: #2b7a45;
     color: whitesmoke;
   }
 
@@ -51,5 +55,7 @@
     height: 60px; 
     text-align: center;
     padding: 20px 0;
-    background-color: #0b4d21;
+    background-color: #2b7a45;
+    position: absolute;
+    bottom: 0;
 }
