--- a/resources/css/components/volunteer.css
+++ b/resources/css/components/volunteer.css
@@ -1,39 +1,43 @@
 * {
-    margin:0; padding:0;
-  }
+  margin:0; padding:0;
+}
 
-  .header {
-    height: 100px;
-    width: 100%;
-    padding: 15px 0;
-    background-color: #050783;
-    color: whitesmoke;
-  }
+.header {
+  height: 100px;
+  width: 100%;
+  padding: 15px 0;
+  background-color:#1b0f8a;
+  color: whitesmoke;
+}
 
-  .headline{
-      line-height: 100px;
-      float: left;
-      margin-left: 100px;
-  }
-  .nav-list {
-      line-height: 100px;
-      float: left;
-      margin-left: 30px;
-      list-style: none;
-  }
-  .nav-list-item {
+.headline img{
+    height: 85px;
+    float: left;
+    margin-left: 100px;
+}
+.nav-list {
+    line-height: 100px;
+    float: right;
+    margin-left: 30px;
     list-style: none;
-    display: inline-block;
-    margin: 0 20px;
-  }
+}
+.nav-list-item {
+  list-style: none;
+  display: inline-block;
+  margin: 0 20px;
+  color: whitesmoke;
+  font-size:21px;
+}
 
 .footer {
-    width: 100%;
-    height: 120px; 
-    text-align: center;
-    padding: 50px 0;
-    background-color: #050783;
+  width: 100%;
+  height: 60px; 
+  text-align: center;
+  padding: 20px 0;
+  background-color: #1b0f8a;
+  position: absolute;
+  bottom: 0; 
 }
 .footer-text {
-    color:whitesmoke;
+  color:whitesmoke;
 }
