色の変更フォルダの新規作成

--- a/resources/css/components/general.css
+++ b/resources/css/components/general.css
@@ -6,7 +6,7 @@
     height: 100px;
     width: 100%;
     padding: 15px 0;
-    background-color: #2b7a45;
+    background-color: #407A52;
     color: whitesmoke;
   }
 
@@ -34,7 +34,7 @@
     height: 60px; 
     text-align: center;
     padding: 20px 0;
-    background-color: #2b7a45;
+    background-color: #407A52;
     position: absolute;
     bottom: 0; 
 }
@@ -46,7 +46,7 @@
     height: 100px;
     width: 100%;
     padding: 15px 0;
-    background-color: #2b7a45;
+    background-color: #407A52;
     color: whitesmoke;
   }
 
@@ -55,7 +55,7 @@
     height: 60px; 
     text-align: center;
     padding: 20px 0;
-    background-color: #2b7a45;
+    background-color: #407A52;
     position: absolute;
     bottom: 0;
 }
