--- a/resources/css/components/volunteer.css
+++ b/resources/css/components/volunteer.css
@@ -6,7 +6,7 @@
   height: 100px;
   width: 100%;
   padding: 15px 0;
-  background-color:#1b0f8a;
+  background-color:#264348;
   color: whitesmoke;
 }
 
@@ -34,7 +34,7 @@
   height: 60px; 
   text-align: center;
   padding: 20px 0;
-  background-color: #1b0f8a;
+  background-color: #264348;
   position: absolute;
   bottom: 0; 
 }
