--- a/resources/css/components/farmer.css
+++ b/resources/css/components/farmer.css
@@ -6,7 +6,7 @@
   height: 100px;
   width: 100%;
   padding: 15px 0;
-  background-color:#dcf095;
+  background-color:#E29C45;
   color: whitesmoke;
 }
 
@@ -34,7 +34,7 @@
   height: 60px; 
   text-align: center;
   padding: 20px 0;
-  background-color: #dcf095;
+  background-color: #E29C45;
   position: absolute;
   bottom: 0; 
 }
