--- a/resources/css/components/App.css
+++ b/resources/css/components/App.css
@@ -10,9 +10,13 @@
     color: whitesmoke;
   }
 
+  .headline{
+    width: 10%;
+    float: left;
+  }
+
   .headline img{
       height: 85px;
-      float: left;
       margin-left: 100px;
   }
   .nav-list {
@@ -117,14 +121,24 @@
   color: whitesmoke;
 }
 
+main{
+  padding-top: 10px;
+}
+
+footer{
+  width: 100%;
+  height: 60px; 
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+}
+
 .home-footer {
     width: 100%;
     height: 60px; 
     text-align: center;
     padding: 20px 0;
     background-color: #407A52;
-    position: absolute;
-    bottom: 0;
 }
 
 /*Volunteer画面のレイアウト*/
@@ -174,8 +188,6 @@
     text-align: center;
     padding: 20px 0;
     background-color: #264348;
-    position: absolute;
-    bottom: 0;
 }
 
 /*farmer画面のレイアウト*/
@@ -225,8 +237,6 @@
     text-align: center;
     padding: 20px 0;
     background-color: #E29C45;
-    position: absolute;
-    bottom: 0;
 }
 
 /*新規登録申請画面のレイアウト*/
@@ -606,4 +616,123 @@ input {
 .cp_ipselect.vo_sl03 select {
 	padding: 8px 38px 8px 8px;
 	color: #264348;
+}
+
+@media all and (min-width: 500px) {
+  .top-page {
+    display: flex;
+  }
+}
+
+.list-form{
+  padding-left: 50px;
+  text-align: left;
+  width: 50%;
+  float: left;
+}
+.edit-form{
+  padding-right: 50px;
+  text-align: right;
+  width: 50%;
+  float: left;
+}
+.edit-form input{
+  width: 500px;
+}
+.edit-form h2{
+  text-align: center;
+  color: #407A52;
+}
+.edit-button{
+  padding: 10px 40px;
+  background-color: #407A52;
+  color: whitesmoke;
+  margin: 10px 30px 10px 30px;
+  user-select: none;
+  cursor: pointer;
+  position: relative;
+  border: none;
+}
+.edit-button:hover{
+  background-color: rgb(54, 114, 57);
+}
+
+.button-blue{
+  position: relative;
+  display: inline-block;
+  border:none;
+  margin-top: 30px;
+  background-color: #264348;
+  font-size: 20px;
+  color: whitesmoke;
+}
+
+.button-farmer{
+  position: relative;
+  display: inline-block;
+  border:none;
+  margin-top: 30px;
+  background-color: #E29C45;
+  font-size: 20px;
+  color: whitesmoke;
+}
+
+.header-link{
+  width: 80%;
+  text-align: right;
+  float: left;
+}
+
+/* ボランティア */
+.edit-form .volunteer-text{
+  text-align: center;
+  color: #264348;
+}
+.volunteer-edit-button{
+  padding: 10px 40px;
+  background-color: #264348;
+  color: whitesmoke;
+  margin: 10px 30px 10px 30px;
+  user-select: none;
+  cursor: pointer;
+  border: none;
+}
+.volunteer-edit-button:hover{
+  background-color: #00897B;
+}
+
+/*　農家　*/
+.edit-form .farmer-text{
+  text-align: center;
+  color: #E29C45;
+}
+.farmer-edit-button{
+  padding: 10px 40px;
+  background-color: #E29C45;
+  color: whitesmoke;
+  margin: 10px 30px 10px 30px;
+  user-select: none;
+  cursor: pointer;
+  border: none;
+}
+.farmer-edit-button:hover{
+  background-color:rgb(241, 152, 43);
+}
+
+.cp_sl0 select {
+  width: 500px;
+  margin-bottom: 30px;
+  background-color:#f2f2f2; 
+	padding: 8px 38px 8px 8px;
+  color: #E29C45;
+  border: none;
+}
+
+.vo_sl0 select {
+  width: 500px;
+  margin-bottom: 30px;
+  background-color:#f2f2f2; 
+	padding: 8px 38px 8px 8px;
+  color: #264348;
+  border: none;
 }
