--- a/resources/css/components/App.css
+++ b/resources/css/components/App.css
@@ -3,34 +3,36 @@
   }
 
   .header {
-    height: 100px;
-    width: 100%;
-    padding: 15px 0;
-    background-color: #407A52;
+    height: 70px;
+    width: 99%;
+    padding: 7px 0 0 12%;
+    background-color: rgb(96, 151, 114);
     color: whitesmoke;
+    position: absolute;
   }
 
   .headline{
-    width: 10%;
+    float: left;
+    width: 800px;
+    text-align: left;
+  }
+  .headline-item{
     float: left;
   }
-
   .headline img{
-      height: 85px;
+      height: 57px;
       margin-left: 100px;
   }
   .nav-list {
-      line-height: 100px;
-      float: right;
-      margin-left: 30px;
-      list-style: none;
+    margin-top: 10px;
+    list-style: none;
   }
   .nav-list-item {
     list-style: none;
     display: inline-block;
     margin: 0 20px;
     color: whitesmoke;
-    font-size:21px;
+    font-size:18px;
   }
 
   .login-page {
@@ -57,8 +59,8 @@
   }
 
   .general{
-    color:#407A52;
-    border-bottom:solid 3px #407A52;
+    color:rgb(96, 151, 114);
+    border-bottom:solid 3px rgb(96, 151, 114);
   }
 
   .form input {
@@ -76,7 +78,7 @@
     font-family: "Roboto", sans-serif;
     text-transform: uppercase;
     outline: 0;
-    background: #407A52;
+    background: rgb(96, 151, 114);
     width: 100%;
     border: 0;
     padding: 15px;
@@ -95,110 +97,37 @@
     font-size: 12px;
   }
   .form .message a {
-    color: #407A52;
+    color: rgb(96, 151, 114);
     text-decoration: none;
   }
 
 .footer {
+    border-top: rgb(96, 151, 114) solid 5px;
     width: 100%;
-    height: 60px; 
-    text-align: center;
+    height: 300px; 
     padding: 20px 0;
-    background-color: #407A52;
-    position: absolute;
+    background-color: #e2e0e0;
+    /*position: absolute;*/
     bottom: 0; 
 }
-.footer-text {
-    color:whitesmoke;
+.footer .footer-item{
+    margin-left: 100px;
+    text-align: left;
+    color:#444;
 }
-
-/*Home画面のレイアウト*/
-.home-header {
-  height: 100px;
-  width: 100%;
-  padding: 15px 0;
-  background-color: #407A52;
-  color: whitesmoke;
+.footer-link{
+  display: inline-block;
+  color: #444;
+  list-style-type: none;
 }
-
-main{
-  padding-top: 10px;
+.footer-text img{
+  height: 110px;
 }
-
-footer{
-  width: 100%;
-  height: 60px; 
-  text-align: center;
-  position: absolute;
-  bottom: 0;
-}
-
-.home-footer {
-    width: 100%;
-    height: 60px; 
+.footer .footer-text {
     text-align: center;
-    padding: 20px 0;
-    background-color: #407A52;
+    color:#444;
 }
-
-/*Volunteer画面のレイアウト*/
-.volunteer-header {
-  height: 100px;
-  width: 100%;
-  padding: 15px 0;
-  background-color: #264348;
-  color: whitesmoke;
-}
-
-.volunteer{
-  color:#264348;
-  border-bottom:solid 3px #264348;
-}
-
-.form .volunteer-button {
-  font-family: "Roboto", sans-serif;
-  text-transform: uppercase;
-  outline: 0;
-  background: #264348;
-  width: 100%;
-  border: 0;
-  padding: 15px;
-  color: whitesmoke;
-  font-size: 14px;
-  -webkit-transition: all 0.3 ease;
-  transition: all 0.3 ease;
-  cursor: pointer;
-}
-.form .volunteer-button:hover,.form .volunteer-button:active,.form .volunteer-button:focus {
-  background: #264348;
-}
-.form .volunteer-message {
-  margin: 15px 0 0;
-  color: #b3b3b3;
-  font-size: 12px;
-}
-.form .volunteer-message a {
-  color: #1f3a3f;
-  text-decoration: none;
-}
-
-.volunteer-footer {
-    width: 100%;
-    height: 60px; 
-    text-align: center;
-    padding: 20px 0;
-    background-color: #264348;
-}
-
 /*farmer画面のレイアウト*/
-.farmer-header {
-  height: 100px;
-  width: 100%;
-  padding: 15px 0;
-  background-color: #E29C45;
-  color: whitesmoke;
-}
-
 .farmer{
   color:#E29C45;
   border-bottom:solid 3px #E29C45;
@@ -252,13 +181,6 @@ html, body {
   overflow-x: hidden;
 }
 
-.step-bar {
-  text-transform: uppercase;
-  color: #264348;
-  font-size: 0.8em;
-  margin-top: 20px;
-}
-
 .step-bar li{
   display: inline-block;
   position: relative;
@@ -289,11 +211,6 @@ html, body {
   z-index: 0;
 }
 
-.step-bar .active {
-  background-color: #264348;
-  color: whitesmoke;
-}
-
 .register-form {
   display: block;
   background: whitesmoke;
@@ -318,17 +235,6 @@ html, body {
   font-size: 0.7em;
   color: #E57373;
 }
-
-.volunteer-form-name{
-  margin: 25px 0;
-  display: block;
-  color: #264348;
-  font-size: 1.15em;
-  text-transform: uppercase;
-  margin-bottom: 20px;
-  font-weight: 200;
-}
-
 .register-form h2 {
   font-size: 1em;
   color: #777;
@@ -350,21 +256,6 @@ html, body {
   color: #555;
 }
 
-.button {
-  display: inline-block;
-  padding: 10px 40px;
-  background-color: #264348;
-  color: whitesmoke;
-  margin: 25px 0  10px 0;
-  user-select: none;
-  cursor: pointer;
-  position: relative;
-}
-
-.button:hover {
-  background-color: #00897B;
-}
-
 .account-setup, .finish-step, .user-details {
   transition: 1s all ease-in-out;
   display: inline-block;
@@ -377,13 +268,6 @@ html, body {
 
 .finish-step, .user-details {
   left: 10000px;
-}
-
-.line {
-  transition: all 1s ease-in-out;
-  background: linear-gradient(to right, #264348 50%, whitesmoke 50%);
-  background-size: 200% 100%;
-  background-position: right bottom;
 }
 
 .line-active {
@@ -405,24 +289,6 @@ label {
 input::placeholder { 
   color:  #aaa;
 }
-
-.volunteer-message {
-  margin: 15px 0 0;
-  color: #b3b3b3;
-  font-size: 12px;
-}
-
-.volunteer-message a {
-  color: #264348;
-  text-decoration: none;
-}
-
-@media(max-width: 600px) {
-  .step-bar {
-    display: none;
-  }
-}
-
 
 /*新規登録申請画面のレイアウト2*/
 
@@ -593,35 +459,10 @@ input {
 	color: #E29C45;
 }
 
-/*ボランティアレイアウト*/
 
-.cp_ipselect.vo_sl03 {
-	position: relative;
-	border: 2px solid #264348;
-	background: whitesmoke;
-}
-.cp_ipselect.vo_sl03::before {
-	position: absolute;
-	top: 0.8em;
-	right: 0.8em;
-	width: 0;
-	height: 0;
-	padding: 0;
-	content: '';
-	border-left: 6px solid transparent;
-	border-right: 6px solid transparent;
-	border-top: 6px solid #264348;
-	pointer-events: none;
-}
-.cp_ipselect.vo_sl03 select {
-	padding: 8px 38px 8px 8px;
-	color: #264348;
-}
-
-@media all and (min-width: 500px) {
-  .top-page {
-    display: flex;
-  }
+.top-page {
+  width: 100%;
+  display: flex;
 }
 
 .list-form{
@@ -641,11 +482,11 @@ input {
 }
 .edit-form h2{
   text-align: center;
-  color: #407A52;
+  color: rgb(96, 151, 114);
 }
 .edit-button{
   padding: 10px 40px;
-  background-color: #407A52;
+  background-color: rgb(96, 151, 114);
   color: whitesmoke;
   margin: 10px 30px 10px 30px;
   user-select: none;
@@ -678,30 +519,15 @@ input {
 }
 
 .header-link{
-  width: 80%;
   text-align: right;
   float: left;
 }
 
-/* ボランティア */
-.edit-form .volunteer-text{
-  text-align: center;
-  color: #264348;
-}
-.volunteer-edit-button{
-  padding: 10px 40px;
-  background-color: #264348;
-  color: whitesmoke;
-  margin: 10px 30px 10px 30px;
-  user-select: none;
-  cursor: pointer;
-  border: none;
-}
-.volunteer-edit-button:hover{
-  background-color: #00897B;
-}
-
 /*　農家　*/
+.account-page .farmer-text{
+  padding-left: 10%;
+  color: #E29C45;
+}
 .edit-form .farmer-text{
   text-align: center;
   color: #E29C45;
@@ -735,4 +561,82 @@ input {
 	padding: 8px 38px 8px 8px;
   color: #264348;
   border: none;
+}
+
+.account-page input{
+  width: 70%;
+}
+.account-page {
+  padding-left: 10%;
+  text-align: left;
+}
+
+
+.ipselect {
+	overflow: hidden;
+	width: 50%;
+	margin: 2em 0;
+	text-align: left;
+}
+.ipselect select {
+	width: 100%;
+	padding-right: 1em;
+	cursor: pointer;
+	text-indent: 0.01px;
+	text-overflow: ellipsis;
+	border: none;
+	outline: none;
+	background: transparent;
+	background-image: none;
+	box-shadow: none;
+	-webkit-appearance: none;
+	appearance: none;
+}
+.ipselect select::-ms-expand {
+    display: none;
+}
+.ipselect.cp_sl03 {
+	position: relative;
+	border: 2px solid #E29C45;
+	background: whitesmoke;
+}
+.ipselect.cp_sl03::before {
+	position: absolute;
+	top: 0.8em;
+	right: 0.8em;
+	width: 0;
+	height: 0;
+	padding: 0;
+	content: '';
+	border-left: 6px solid transparent;
+	border-right: 6px solid transparent;
+	border-top: 6px solid #E29C45;
+	pointer-events: none;
+}
+.ipselect.cp_sl03 select {
+	padding: 8px 38px 8px 8px;
+	color: #E29C45;
+}
+
+.ipselect.vo_sl03 {
+	position: relative;
+	border: 2px solid #264348;
+	background: whitesmoke;
+}
+.ipselect.vo_sl03::before {
+	position: absolute;
+	top: 0.8em;
+	right: 0.8em;
+	width: 0;
+	height: 0;
+	padding: 0;
+	content: '';
+	border-left: 6px solid transparent;
+	border-right: 6px solid transparent;
+	border-top: 6px solid #264348;
+	pointer-events: none;
+}
+.ipselect.vo_sl03 select {
+	padding: 8px 38px 8px 8px;
+	color: #264348;
 }
