--- a/resources/css/components/App.css
+++ b/resources/css/components/App.css
@@ -2,6 +2,7 @@
     margin:0; padding:0;
   }
 
+  /*headerとfooter*/
   .header {
     height: 70px;
     width: 99%;
@@ -24,8 +25,10 @@
       margin-left: 100px;
   }
   .nav-list {
+    white-space: nowrap;
     margin-top: 10px;
     list-style: none;
+    position: fixed;
   }
   .nav-list-item {
     list-style: none;
@@ -34,7 +37,58 @@
     color: whitesmoke;
     font-size:18px;
   }
+  .item{
+    list-style: none;
+    padding-left: 0;
+    margin: 0;
+    position: absolute;
+    opacity: 0;
+    z-index: -1;
+    width: 11em;
+  }
+  .nav-list:after {
+    content: "";
+    clear: both;
+    display: block;
+  }
+  .nav-item-name:hover + .item, .item:hover {
+    opacity: 1;
+    z-index: 1;
+    background-color: rgb(116, 173, 135);
+  }
+  .item-list{
+    display: inline-block;
+    color: whitesmoke;
+  }
+.footer {
+    border-top: rgb(96, 151, 114) solid 5px;
+    width: 100%;
+    height: 300px; 
+    padding: 20px 0;
+    background-color: #e2e0e0;
+    /*position: absolute;*/
+    bottom: 0; 
+}
+.footer .footer-item{
+    margin-left: 100px;
+    text-align: left;
+    color:#444;
+}
+.footer-link{
+  display: inline-block;
+  color: #444;
+  list-style-type: none;
+}
+.footer-text img{
+  height: 110px;
+}
+.footer .footer-text {
+    text-align: center;
+    color:#444;
+}
 
+
+  /*
   .login-page {
     width: 360px;
     padding: 8% 0 0;
@@ -100,33 +154,9 @@
     color: rgb(96, 151, 114);
     text-decoration: none;
   }
+  */
 
-.footer {
-    border-top: rgb(96, 151, 114) solid 5px;
-    width: 100%;
-    height: 300px; 
-    padding: 20px 0;
-    background-color: #e2e0e0;
-    /*position: absolute;*/
-    bottom: 0; 
-}
-.footer .footer-item{
-    margin-left: 100px;
-    text-align: left;
-    color:#444;
-}
-.footer-link{
-  display: inline-block;
-  color: #444;
-  list-style-type: none;
-}
-.footer-text img{
-  height: 110px;
-}
-.footer .footer-text {
-    text-align: center;
-    color:#444;
-}
+
 /*farmer画面のレイアウト*/
 .farmer{
   color:#E29C45;
