購入処理の実装とレイアウトの変更

--- a/resources/css/components/App.css
+++ b/resources/css/components/App.css
@@ -244,7 +244,7 @@
 }
 
 /*商品詳細画面レイアウト*/
-.products-page,.buy-page{
+.products-page{
   width: 75%;
   padding: 90px 0 0 0;
   margin: auto auto 10px auto;
@@ -275,6 +275,14 @@
   width: 500px;
   margin: 0 0 10px 30px;
   text-align: center;
+}
+
+/*購入画面*/
+.buy-page{
+  width: 75%;
+  padding: 90px 0 0 0;
+  margin: auto auto 10px auto;
+  font-size: 16px;
 }
 
 /*農家管理者の画面*/
